welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:5: error: illegal start of simple expression
    if (nums(i) == nums(i+1) && nums(i)==nums(i+2))){
                                                   ^